# Konfa26HackathonAI

./: README.md  app.py  pyproject.toml
agent_context_files/: Retail_data_description_from_databricks.md  Weather_data_descroiption_from_databricks.md  main_task.md  sub_agent_instructions.md
artifacts/: metrics.json
artifacts/city_forecast/: metrics.json  model.joblib
data/: weather_sales_demo.csv
data/city_forecast/: city_daily_sales_forecast.csv  city_daily_sales_weather_training.csv  city_daily_weather_forecast.csv
src/: weather_sales_pipeline.py
src/city_forecast/: README.md  __init__.py  app_forecast.py  dbsql.py  ml_forecast.py
src/city_forecast/docs/: forecast_weather_source_notes.md  schema_documentation.md
src/city_forecast/sql/: 01_city_daily_weather_forecast.sql  02_city_daily_weather_history.sql  03_target_city_customers_resolved.sql  04_city_daily_sales_history.sql  06_city_daily_sales_weather_training.sql
